--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,15 @@
-<p>home works!</p>
+
+<header class="row">
+    <section id="header-image" class="text-center" style="padding:1em;" >
+        <img src="assets/images/zines_logo.png" class="img-fluid" style="max-height:7em" />
+    </section>
+</header>
+<nav class= "row">
+    <mat-tab-group class="text-center">
+        <mat-tab label="Zines">
+            <!--TODO: Break these into partials-->
+            Zines </mat-tab>
+        <mat-tab label="Citations">Citations </mat-tab>
+        <mat-tab label="Lagniappe"> Lagniappe </mat-tab>
+      </mat-tab-group>
+</nav>
